# x11_wm_rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  config.toml  imgui.ini  install.sh  picom.conf  run.sh  x11_wm_rust.desktop  x11_wm_rust_session  xinitrc  xinitrc_debug
base/src/: lib.rs
data/: 3d_pixel_cursor_32x32.cursor  neon-dolphin-cursor-pack_left_32x32.cfg
data/cursors/: 3d_pixel_cursor_32x32.cfg  README.md  neon-dolphin-cursor-pack_25x25.cfg  neon-dolphin-cursor-pack_25x25.cursor  neon-dolphin-cursor-pack_left_32x32.cursor  starter-lights-pack_32x32.cfg  starter-lights-pack_32x32.cursor
msg_types/: Cargo.toml
msg_types/src/: lib.rs
src/: config.rs  ewmh.rs  keybindings.rs  main.rs  monitor.rs  window.rs  workspace.rs  xcb_wm.rs
testbed_window/: Cargo.toml  README.md
testbed_window/src/: main.rs
window_manager/: Cargo.toml  xinitrc_debug
window_manager/src/: bar_message.rs  config.rs  icccm.rs  keybindings.rs  main.rs  monitor.rs  unix_server.rs  window.rs  workspace.rs  xcb_wm.rs
wm_msg/: Cargo.toml
wm_msg/src/: main.rs
x11_bar_imgui_cpp/: .clang-format  .clangd  CMakeLists.txt  build_release.sh  run.sh  run_release.sh
x11_bar_imgui_cpp/include/: alsa.hpp  assert.hpp  defines.hpp  gui_main.h  message.hpp  parse_num.hpp  slice.hpp  types.hpp  unix_communication_bus.hpp  unix_socket.hpp  vulkan_renderer.h
x11_bar_imgui_cpp/src/: gui_main.cpp  main.cpp  unix_socket.cpp  vulkan_renderer.cpp
x11_bindings/: Cargo.toml  bindings.rs  build.rs  x11_headers.h  xcb_wrapper.h
x11_bindings/src/: bindings.rs  connection.rs  epoll.rs  inotify.rs  lib.rs
